vlib/v/checker/tests/undefined_ident_in_if_guard_err_b.vv
fn main(){
	items := {'a': 'A'}
	if id := items[id] {} else {}
}
